feat: Enhance application configuration with environment variable support; add logging configuration for different profiles